# Lingo

./: .gitignore  CHANGELOG.md  LICENSE  Lingo.cabal  README.md
src/: Lingo.hs  Syntax.hs
src/Core/: Data.hs  Elaboration.hs  Error.hs  Evaluation.hs  Execution.hs  Judgement.hs  Program.hs  Term.hs  TypeChecking.hs
src/Core/Judgement/: Context.hs  Evaluation.hs  Typing.hs  Utils.hs
src/Core/Judgement/Typing/: Context.hs  Inference.hs  Type.hs  Unification.hs  Universe.hs
src/IO/: Args.hs  Source.hs
src/Lexing/: Lexer.x  Support.hs  Tokens.hs
src/Parsing/: Parser.y  Syntax.hs
test/: test.lingo
test/TestPrograms/: basic.lingo  bool.lingo  groups.lingo  hott.lingo  identity.lingo  naturals.lingo  structures.lingo  terminal.lingo  test.lingo
