cabal-version:       2.2

name:                Lingo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Lingo#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Isaac Ling
-- maintainer:       
copyright:           2025 Isaac Ling
-- category:         
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable Lingo
  hs-source-dirs:      src
  main-is:             Lingo.hs
  other-modules:       Lexing.Lexer
                     , Lexing.Tokens
                     , Parsing.Parser
                     , Parsing.Syntax
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5 && < 0.6
                     , bytestring >= 0.12.1.0
  build-tool-depends:  alex:alex   >= 3.2.4 && < 4.0
                     , happy:happy >= 1.19.2 && < 2.2.0
  ghc-options:         -main-is Lingo
